--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.imagen {
+  width: 100%;
+}
+
+.noticia__parrafo {
+  font-size: 19px;
+}
